# ml-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  index.html  mkdocs.yaml  ml-project.code-workspace  pyproject.toml  ruff.toml
.github/workflows/: pr-check.yaml  python-docs.yaml
config/: config.toml
ml_project/: __init__.py  __main__.py  data_extraction.py  data_preparation.py  data_storage.py  inference.py  model_training.py  preprocessing.py  utils.py
ml_project/scripts/: extract_data.py  prepare_data.py  preprocess_data.py  run_inference.py  train_model.py
scripts/: __init__.py  curl_inference_examples.sh  run.sh  serve_model.sh
search/: search_index.json
tests/: conftest.py  test_data_extraction.py  test_version.py
