[project]
name = "ml-project"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
description = ""
readme = "README.md"
authors = [{ name = "krck360_azu" }]
maintainers = [{ name = "krck360_azu" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

dependencies = ["jupyter", "pydantic", "pymdown-extensions", "typer"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock", "pytest-reportlog"]
docs = ["mkdocs", "mkdocs-material", "mkdocs-section-index"]

[project.scripts]
ml-project = "ml_project.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

###################################
#
#              SETTINGS
#
###################################

[tool.hatch.build.targets.wheel]
packages = ["ml_project"]
