[project]
name = "ml-project"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
description = ""
readme = "README.md"
authors = [{ name = "krck360_azu" }]
maintainers = [{ name = "krck360_azu" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

dependencies = [
  "jupyter",
  "lightgbm>=4.6.0",
  "loguru>=0.7.3",
  "polars>=1.29.0",
  "pydantic",
  "pymdown-extensions",
  "scikit-learn>=1.6.1",
  "tomli>=2.2.1",
  "typer",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock", "pytest-reportlog"]
docs = ["mkdocs", "mkdocs-material", "mkdocs-section-index"]

[project.scripts]
extract-data = "ml_project.scripts.extract_data:main"
preprocess-data = "ml_project.scripts.preprocess_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

###################################
#
#              SETTINGS
#
###################################

[tool.hatch.build.targets.wheel]
packages = ["ml_project"]
